--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -12,6 +12,15 @@ en:
         other: "%{count} errors prohibited this %{resource} from being saved:"
 
   devise:
+    user_registrations:
+      user_registration:
+        signed_up: 'Welcome! You have signed up successfully.'
+        signed_up_but_unconfirmed: 'A message with a confirmation link has been sent to your email address. Please open the link to activate your account.'
+        signed_up_but_inactive: 'You have signed up successfully. However, we could not sign you in because your account is not yet activated.'
+        signed_up_but_locked: 'You have signed up successfully. However, we could not sign you in because your account is locked.'
+        updated: 'You updated your account successfully.'
+        update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address."
+        destroyed: 'Bye! Your account was successfully cancelled. We hope to see you again soon.'
     failure:
       already_authenticated: 'You are already signed in.'
       unauthenticated: 'You need to sign in or sign up before continuing.'
@@ -24,11 +33,12 @@ en:
     sessions:
       signed_in: 'Signed in successfully.'
       signed_out: 'Signed out successfully.'
-    passwords:
-      send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
-      updated: 'Your password was changed successfully. You are now signed in.'
-      updated_not_active: 'Your password was changed successfully.'
-      send_paranoid_instructions: "If your e-mail exists on our database, you will receive a password recovery link on your e-mail"
+    user_passwords:
+      user_registration:
+        send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
+        updated: 'Your password was changed successfully. You are now signed in.'
+        updated_not_active: 'Your password was changed successfully.'
+        send_paranoid_instructions: "If your e-mail exists on our database, you will receive a password recovery link on your e-mail"
     confirmations:
       send_instructions: 'You will receive an email with instructions about how to confirm your account in a few minutes.'
       send_paranoid_instructions: 'If your e-mail exists on our database, you will receive an email with instructions about how to confirm your account in a few minutes.'
